2007-11-17  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellAlbum.cs:
	Do not draw the second line if the artist informatio is unset

2007-11-17  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/CompositeTrackListView.cs:
	Allow the browser to be shown at either the top or the left of the 
	track view; merge an action UI into the menu for toggling between the
	two modes

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml: Added
	a placeholder for the browser view menu options

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ColumnCellText.cs: Add proper padding
	for the right side of the text to the pango layout

	* src/Core/Banshee.ThickClient/Banshee.Gui/InterfaceActionService.cs: 
	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Added view
	menu actions

2007-11-16  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Fix the vadjustment
	to account for the FooterHeight; Make FooterHeight reflect the BorderWidth

2007-11-16  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Set RulesHint to true to show alternating row background colors

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Properly draw RulesHint

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListViewGraphics.cs: Added DrawRowRule

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs:
	Fix build error

2007-11-16  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellAlbum.cs:
	Use ArtworkRenderer to render the thumbnail of the cover; do the layout
	of the text properly

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ArtworkRenderer.cs:
	Extracted the cover art rendering from TrackInfoDisplay so we can render
	the same style of cover in many places

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Change the cell rendering